Refactor code using class

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <header>
         <div>
           <h1>Library</h1>
-          <p>There are <span class="total">7</span> total books</p>
+          <p class="total"></p>
         </div>
 
         <div>
